fixed cropping issues affecting testing data

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -235,7 +235,6 @@
 .image {
   border-radius: 3px;
   margin: 3px;
-  height: 50px;
 }
 
 #image-wrapper {
